Avoid some byte copy operation in SQLRequestParser and VarCharType